# RUXAILAB

./: .editorconfig  .env  .env.example  .eslintrc.js  .firebaserc  .gitignore  .prettierignore  .prettierrc  Dockerfile  Dockerfile-playwright  LICENSE  README.md  babel.config.js  conf.json  contributing.md  contributions.json  cypress.config.js  docker-compose.yml  dockerfile  eslint.config.mjs  firebase.json  firestore.indexes.json  firestore.rules  ishikawasTools.py  jest.config.js  jsconfig.json  package-lock.json  package.json  playwright.config.js  playwright.config.ts  pyproject.toml  render.yaml  sonarcloud_to_github.py  user_mappings.json  vue.config.js
.firebase/: hosting.ZGlzdA.cache  hosting.cHVibGlj.cache
.github/: depenadabot.yml  greetings.yaml
discord-bot/: index.js
discord_bot/: Dockerfile  README.md  auth.py  bot.py  commands.py  contributions.json  deploy.sh  discord_bot_requirements.txt  entrypoint.sh  fetch_contributors.py  firestore.py  init_discord_bot.py  requirements.txt  role_utils.py  run_bot.sh  update_discord_roles copy.py  update_discord_roles.py  user_mappings.json
e2e/: createHeuristicTest.spec.js  editHeuristicTest.spec.js  ruxailabtest.spec.js  signIntest.spec.js  signuptest.spec.js  template_testing.spec.ts
firebase-emulator/: Dockerfile  firebase.json  firestore.indexes.json  storage.rules
functions/: eslint.config.js  index.js  package-lock.json  package.json
ishikawa_tools/: ishikawa_tools_script.py  requirements.txt
public/: index.html
src/: App.vue  i18n.js  main.js  server.js
tests/: test-utils.js
(+954 files in other folders)
